# mountain_car

./: Projet_RL.ipynb  Projet_RL_Q_Learning.ipynb  Projet_RL_V1_SARSA_Semi-Grad.ipynb  Projet_RL_semigradient_branch.ipynb  README.md  SAUV_Project_RL.ipynb  alpha_gamma_search_epsilon=0.005_glei=true.json  alpha_gamma_search_epsilon=0.01_glei=true.json  pyproject.toml  requirements.txt  tilings.pkl  weights.pkl
data/q_learning/: ql_alpha_gamma_search_epsilon=0.01_glei=true.json  ql_glei_vs_noglei.json
data/sarsa/: alpha_gamma_search_epsilon=0.01_glei=true.json
data/semi-gradient_sarsa/: alpha_gamma_search_epsilon=0.005_glei=true.json  glei_vs_noglei.json
param/: tilings.pkl  weights.pkl
qlearning/eps_greedy/: glei_vs_noglei.json
sarsa/eps_greedy/: alpha_gamma_search_epsilon=0.005_glei=true.json
src/: QLearning_Tuning.ipynb  SARSA_Tuning.ipynb  evaluate.py  main.py  qlearning_fixed.ipynb  qlearning_tuning.ipynb  requirements.txt  sarsa.py  sarsa_fixed.ipynb  sarsa_tuning.ipynb  semigradient_sarsa_tuning.ipynb  train.py  utils.py
src/agents/: SarsaAgent.py  nn_qlearning.py  nn_semigrad_sarsa.py  q_learning.py  qlearning.py  sarsa.py  semigradient_sarsa.py  td_agent.py
src/cliff_walking_experiments/: test.ipynb
src/experiments/: nn_qlearning_test.ipynb  nn_semigrad_sarsa_test.ipynb
src/mountaincar_experiments/: qlearning_tuning.ipynb  sarsa_tuning.ipynb  sarsa_vs_qlearning.ipynb
src/policies/: eps_greedy_policy.py  policy.py  softmax_policy.py
src/utils/: custom_gym_envs.py  encoding.py  policy.py  tile_coding.py  utils_fct.py
(+84 files in other folders)
